--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "matchdep": "~0.3.0",
     "load-grunt-config": "~0.7.1",
     "Faker": "~0.6.2",
-    "grunt-es6-module-transpiler": "^0.6.0"
+    "grunt-es6-module-transpiler": "^0.6.0",
+    "grunt-concat-sourcemap": "^0.4.1",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt": "^0.4.5"
   }
 }
